[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/Screens/ScoreScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/General Art/ScoreScreen.png" type="Texture" id=2]
[ext_resource path="res://src/UserInterface/Messages.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UserInterface/Title.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UserInterface/Score.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UserInterface/ScoreValue.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/General Art/Star.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "game_over"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Background/MarginContainer/HBoxContainer/leftContainer/statuses/Game Status:custom_colors/font_color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 3.03143, 0.450625 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Background/MarginContainer/HBoxContainer/leftContainer/statuses/Game Status:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/Star:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "new_round"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Star:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 3.03143, 0.450625 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=4]
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Background/MarginContainer/HBoxContainer/right/scoreValue/Container/Score:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 3.03143, 0.420448 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.462745 ), Color( 1, 1, 1, 1 ) ]
}

[node name="ScoreScreen" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 15.0
margin_right = -10.0
margin_bottom = -10.0

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer"]
margin_right = 184.0
margin_bottom = 131.0
custom_constants/separation = 22

[node name="leftContainer" type="MarginContainer" parent="Background/MarginContainer/HBoxContainer"]
margin_right = 68.0
margin_bottom = 131.0
custom_constants/margin_left = 5

[node name="statuses" type="VBoxContainer" parent="Background/MarginContainer/HBoxContainer/leftContainer"]
margin_left = 5.0
margin_right = 68.0
margin_bottom = 131.0
custom_constants/separation = 30

[node name="Game Status" parent="Background/MarginContainer/HBoxContainer/leftContainer/statuses" instance=ExtResource( 3 )]
margin_right = 63.0
margin_bottom = 52.0
custom_constants/line_spacing = 0
text = "GAME
OVER"
align = 1

[node name="RoundLabel" parent="Background/MarginContainer/HBoxContainer/leftContainer/statuses" instance=ExtResource( 3 )]
margin_top = 82.0
margin_right = 63.0
margin_bottom = 108.0
custom_constants/line_spacing = 0
text = "SET"
align = 1

[node name="right" type="VBoxContainer" parent="Background/MarginContainer/HBoxContainer"]
margin_left = 90.0
margin_right = 154.0
margin_bottom = 131.0
custom_constants/separation = 8

[node name="Container" type="MarginContainer" parent="Background/MarginContainer/HBoxContainer/right"]
margin_right = 64.0
margin_bottom = 38.0
custom_constants/margin_left = 0

[node name="ballCount" type="HBoxContainer" parent="Background/MarginContainer/HBoxContainer/right/Container"]
margin_right = 64.0
margin_bottom = 38.0
custom_constants/separation = 18

[node name="Balls" parent="Background/MarginContainer/HBoxContainer/right/Container/ballCount" instance=ExtResource( 4 )]
margin_right = 22.0
rect_min_size = Vector2( 22, 0 )
custom_colors/font_color = Color( 0.996078, 0.996078, 0.996078, 1 )
text = "0"
align = 1
valign = 1

[node name="BallsLabel" parent="Background/MarginContainer/HBoxContainer/right/Container/ballCount" instance=ExtResource( 5 )]
margin_left = 40.0
margin_top = 7.0
margin_right = 64.0
margin_bottom = 31.0
custom_constants/line_spacing = 0
text = "Balls
left"
align = 1
valign = 1

[node name="bonusValue" type="MarginContainer" parent="Background/MarginContainer/HBoxContainer/right"]
margin_top = 46.0
margin_right = 64.0
margin_bottom = 81.0
custom_constants/margin_left = 2

[node name="Container" type="VBoxContainer" parent="Background/MarginContainer/HBoxContainer/right/bonusValue"]
margin_left = 2.0
margin_right = 64.0
margin_bottom = 35.0
custom_constants/separation = 0

[node name="BonusLabel" parent="Background/MarginContainer/HBoxContainer/right/bonusValue/Container" instance=ExtResource( 5 )]
margin_right = 62.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( 30.6024, -0.356018 )
text = "Bonus"

[node name="Bonus" parent="Background/MarginContainer/HBoxContainer/right/bonusValue/Container" instance=ExtResource( 6 )]
margin_top = 12.0
margin_right = 62.0
margin_bottom = 35.0
text = "0000"

[node name="scoreValue" type="MarginContainer" parent="Background/MarginContainer/HBoxContainer/right"]
margin_top = 89.0
margin_right = 64.0
margin_bottom = 124.0
custom_constants/margin_left = 2

[node name="Container" type="VBoxContainer" parent="Background/MarginContainer/HBoxContainer/right/scoreValue"]
margin_left = 2.0
margin_right = 64.0
margin_bottom = 35.0
custom_constants/separation = 0

[node name="ScoreLabel" parent="Background/MarginContainer/HBoxContainer/right/scoreValue/Container" instance=ExtResource( 5 )]
margin_right = 62.0
margin_bottom = 12.0
text = "Score"

[node name="Score" parent="Background/MarginContainer/HBoxContainer/right/scoreValue/Container" instance=ExtResource( 6 )]
margin_top = 12.0
margin_right = 62.0
margin_bottom = 35.0
text = "00000"

[node name="Star" type="TextureRect" parent="Background"]
visible = false
margin_left = 26.3345
margin_top = 66.2994
margin_right = 89.3345
margin_bottom = 101.299
texture = ExtResource( 7 )

[node name="BonusTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/game_over = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/new_round = SubResource( 3 )
anims/score_updated = SubResource( 4 )

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="BonusTimer" to="." method="_on_timeout"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_AnimationTimer_timeout"]
